# vpnls

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
scripts/: benchmark.py  usage.py
src/vpnls/: _core.pyx  api.py  grid.py  jax.py  scipy.py  sim.py  types.py
tests/: conftest.py  test_api.py  test_grid.py  test_jax.py  test_scipy.py  test_sim.py
